[package]
name = "xtce-rs"
version = "0.1.0"
authors = ["Nicolae Mihalache <xpromache@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.18"
bimap = "0.6"
hex = "0.4.2"
enum-map = "2.4.1"
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0"
rand = {version = "0.8", features = ["small_rng"]}
lasso = {version = "0.7", features = ["multi-threaded"]}
smallvec = {version = "1.10", features = ["union"]}

[profile.release]
debug = 1